GNOME Bugzilla – Bug 721344
Memory leak in clutter_gst_auto_video_sink_accept_caps()
Last modified: 2014-01-03 11:17:00 UTC
I found a memory leak while running Cheese, which uses clutter-gst. The Valgrind trace is: ==947== 473 (40 direct, 433 indirect) bytes in 1 blocks are definitely lost in l oss record 25,806 of 27,371 ==947== at 0x4A0645D: malloc (in /usr/lib64/valgrind/vgpreload_memcheck-amd64 -linux.so) ==947== by 0x922EF40: g_malloc (gmem.c:102) ==947== by 0x92449DD: g_slice_alloc (gslice.c:1014) ==947== by 0x91FEA34: g_array_sized_new (garray.c:198) ==947== by 0x5948837: gst_caps_new_empty (gstcaps.c:224) ==947== by 0x594ADCA: gst_caps_intersect_full (gstcaps.c:1488) ==947== by 0x3B4957C4: clutter_gst_auto_video_sink_query (clutter-gst-auto-video-sink.c:455) ==947== by 0x5973379: gst_pad_query (gstpad.c:3506) ==947== by 0x59A5C35: gst_pad_query_accept_caps (gstutils.c:2847) ==947== by 0x56E6989: gst_base_transform_setcaps (gstbasetransform.c:1189) ==947== by 0x56E7FC4: gst_base_transform_sink_eventfunc (gstbasetransform.c:1860) ==947== by 0x596C1AA: gst_pad_send_event_unchecked (gstpad.c:5036) ==947== by 0x596C993: gst_pad_push_event_unchecked (gstpad.c:4732) ==947== by 0x596CE07: push_sticky (gstpad.c:3365) ==947== by 0x596B1F1: events_foreach (gstpad.c:533) ==947== by 0x5975697: gst_pad_push_event (gstpad.c:3421) ==947== by 0x56E708C: gst_base_transform_setcaps (gstcompat.h:55) ==947== by 0x56E7FC4: gst_base_transform_sink_eventfunc (gstbasetransform.c:1860) ==947== by 0x596C1AA: gst_pad_send_event_unchecked (gstpad.c:5036) ==947== by 0x596C993: gst_pad_push_event_unchecked (gstpad.c:4732)
Created attachment 265153 [details] [review] fix the memory leak
Comment on attachment 265153 [details] [review] fix the memory leak Looks good, thanks for spotting this.
Comment on attachment 265153 [details] [review] fix the memory leak Thanks, pushed to clutter-gst-2.0 as d72d5f7ab39676679463d423960e437468022839.
Are you sure you've pushed that? I can't see that commit anywhere.
Sorry, I felt sure that I pushed it, but I checked and had not. I pushed it now, and it is on the clutter-gst-2.0 branch: https://git.gnome.org/browse/clutter-gst/log/?h=clutter-gst-2.0
Thanks!