Fix memory leak in clutter_gst_auto_video_sink_accept_caps()

https://bugzilla.gnome.org/show_bug.cgi?id=721344